# mise-nixpkgs-plugin

./: .busted  AGENTS.md  LICENSE  README.md  bitrise.yml  metadata.lua  mise.toml  nixpkgs-index-config.yml  nixpkgs-index.json  nixpkgs-mapping.json
hooks/: backend_exec_env.lua  backend_install.lua  backend_list_versions.lua
lib/: nix.lua  nixpkgs_mapping.lua  runtime_deps.lua  version.lua
mise-tasks/: test  test-integration
nixpkgs-index/: .gitignore  PLAN.md  README.md  example-config.yml  nixpkgs-index.yaml  nixpkgs-index.yml  pyproject.toml
nixpkgs-index/.claude/: settings.local.json
nixpkgs-index/src/nixpkgs_index/: __init__.py  cli.py  config.py  github.py  index.py  nixpkgs.py  validate.py
nixpkgs-index/src/nixpkgs_index/commands/: __init__.py  index.py  utils.py  validate.py
nixpkgs-index/tests/: __init__.py  test_config.py  test_github_client.py  test_index.py  test_interval_logic.py  test_nixpkgs_error_handling.py  test_validate.py
spec/helpers/: fixtures.lua  mock_modules.lua  mock_runtime.lua
spec/hooks/: backend_exec_env_spec.lua  backend_install_spec.lua  backend_list_versions_spec.lua
spec/lib/: nix_spec.lua  runtime_deps_spec.lua
